# organization-manager

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker.yml  lint.yml
deployment/: Dockerfile  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  healthcheck.sh
docs/: deploy.md  tech_spec.md
migrations/: env.py
migrations/versions/: 2025_09_29_1234-000000000000.py  2025_10_20_1241-34c11c989d8d.py  2025_10_21_1718-16f871b764eb.py  2025_10_22_1927-3059b28e5c71.py
orgmgr/: __init__.py  __main__.py  app.py  config.py  version.py
orgmgr/cli/: __init__.py  cli.py  db.py  run.py
orgmgr/core/: types.py
orgmgr/core/entities/: activity.py  building.py  organization.py  organization_activity.py
orgmgr/core/exceptions/: activity.py  building.py  organization.py
orgmgr/core/interfaces/: __init__.py
orgmgr/dependencies/: __init__.py  action.py  auth.py  config.py  container.py  query.py  repository.py  service.py  uow.py
orgmgr/filters/: organization.py
orgmgr/implementations/: __init__.py
orgmgr/implementations/actions/: __init__.py  activity.py
orgmgr/implementations/queries/: __init__.py  activity.py  building.py  organization.py
orgmgr/implementations/repositories/: __init__.py  activity.py  building.py  (+2 more)
orgmgr/models/: __init__.py  activity.py  building.py  organization.py  organization_activity.py
orgmgr/routers/: __init__.py  ping.py
orgmgr/schemas/: __init__.py  activity.py  building.py  organization.py
orgmgr/services/: __init__.py  activity.py  auth.py  building.py  organization.py
(+74 files in other folders)
